--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,8 @@
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/dist/server.js"
-    }
+    { "src": "/api/users.*", "dest": "/api/users" },
+    { "src": "/api/products.*", "dest": "/api/products" },
+    { "src": "/api/orders.*", "dest": "/api/orders" }
   ]
 }
