--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,12 @@
       "use": "@vercel/node"
     }
   ],
+
+  "functions": {
+    "app/**/*": {
+      "maxDuration": 5
+    }
+  },
   "routes": [
     {
       "src": "/(.*)",
