--- a/package.json
+++ b/package.json
@@ -20,15 +20,22 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-openapi-validator": "^5.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.1",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "copyfiles": "^2.4.1",
+    "openapi-typescript": "^7.6.1",
+    "swagger-jsdoc": "^6.2.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   }
